fix(svelte/svelte-rich-text): use CSS variable for toolbar z-index

--- a/svelte/svelte-rich-text/src/lib/styles.css
+++ b/svelte/svelte-rich-text/src/lib/styles.css
@@ -127,7 +127,8 @@
     display: flex;
     gap: 5px;
     position: relative;
-    z-index: 9;
+    z-index: var(--fl-toolbar-sticky-position, 10);
+
 
     .fl-bubble-menu-mark-button {
       border-radius: 9px;
